# nifty-new-life

./: .python-version  .unibeautifyrc.yml  README.md  buildspec.yml  pyproject.toml  requirements.txt  vercel.json
.devcontainer/: .gitignore  Dockerfile  compose.yml  devcontainer.json  entrypoint.sh
docker-images/: Dockerfile  compose.override.yml  compose.yml  entrypoint.sh
docker-images/mysql/: Dockerfile
docker-images/mysql/init/: 0.sql
docs/: how_to_debug.md  how_to_edit_models.md  how_to_implement_auth.md
migrations/versions/: 4f08060674b2_.py  9e719e4e48db_.py  ad4863e6fc98_.py  d5df9a06a8fb_.py  f38da1353e3c_.py
src/web/: app.py  config.py  custom_rule.py  models.py  routes.py
src/web/auth/: __init__.py  forms.py  models.py  routes.py
src/web/auth/templates/: login.html  signup.html
src/web/templates/: answer.html  delogin_answer.html  form.html  index.html  layout.html  my_top_page.html  not_login_form.html  secret.html  top_page.html
